# studing_cpp

./: CMakeLists.txt
lections_cherepanov/semestr1/lection1/: main.cpp
targets/: target1_test
